[package]
name = "tower-abci"
version = "0.15.0"
authors = ["Henry de Valence <hdevalence@penumbra.zone>"]
edition = "2021"
license = "MIT"
description = "A `tower`-based interface to Tendermint's ABCI"
repository = "https://github.com/penumbra-zone/tower-abci"
homepage = "https://github.com/penumbra-zone/tower-abci"
documentation = "https://docs.rs/tower-abci"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-proto = "0.37"
tendermint = "0.37"
bytes = "1"
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1"
prost = "0.12"
bls12_381 = "0.8"  # Use the version required by bitvec
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # For JSON serialization
bincode = "1.3"     # For binary serialization
hex = "0.4.3"
group = "0.13.0"

[dev-dependencies]
structopt = "0.3"
tracing-subscriber = "0.3.17"

[features]
doc = []

